<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/backDivider" />

    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:background="@color/darkGray"
        android:gravity="center"
        android:orientation="horizontal">

        <com.olejnikov.testovoe.mylibrary.presentation.ui.view.activity.ItemNavigationBarView
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/mainScreen"
            android:layout_weight="1"
            app:image="@drawable/ic_house"/>

        <com.olejnikov.testovoe.mylibrary.presentation.ui.view.activity.ItemNavigationBarView
            android:id="@+id/favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/favouriteScreen"
            android:layout_weight="1"
            app:image="@drawable/ic_favourite"/>

        <com.olejnikov.testovoe.mylibrary.presentation.ui.view.activity.ItemNavigationBarView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/accountScreen"
            android:layout_weight="1"
            app:image="@drawable/ic_profile"/>

    </LinearLayout>
</LinearLayout>
